src/css/footer.css
footer {
    text-align: center;
    border-top: 2px;
    background: linear-gradient(to bottom, rgb(191, 0, 255) 0%, rgba(102, 0, 255, 0) 100%);
    padding-top: 5px;
    font-family: Arial, Helvetica, sans-serif;
    
    display:flex;
    justify-content: center;
    flex-direction: column;
    height: 130px;
    margin-top: auto;
    
    position: absolute;
    bottom: 0;
    left:0;
    right:0;
    top:0;
}

footer .links {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    align-items:center;
    justify-content: center;
}

footer .links a {
    display: inline-flex;
    align-items: center;
    justify-content: center;
    gap: 1px;
}
p {
    line-height: 0;
    margin:5;
}

footer .links img {
    max-width: 20%;
    max-height: 20%;
    object-fit: contain;
}

